fix scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -56,16 +56,17 @@ body {
     background-color: var(--scroll-thumb);
 }
 
-.scrollbar-secondary {
+.scrollbar-secondary,
+.card {
     &::-webkit-scrollbar-track, 
-    ::-webkit-scrollbar-track,
+    *::-webkit-scrollbar-track,
     &::-webkit-scrollbar,
-    ::-webkit-scrollbar {
+    *::-webkit-scrollbar {
         background-color: var(--scroll-background-secondary);
     }
 
     &::-webkit-scrollbar-thumb,
-    ::-webkit-scrollbar-thumb {
+    *::-webkit-scrollbar-thumb {
         background-color: var(--scroll-thumb-secondary);
     }
 }
